FIxes grid overflows.

--- a/src/app/bookings/booking-form/booking-form.component.scss
+++ b/src/app/bookings/booking-form/booking-form.component.scss
@@ -3,7 +3,7 @@
   display: grid;
   grid-column-gap: 48px;
   grid-row-gap: 12px;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, minmax(250px, 1fr));
   grid-template-rows: repeat(2, 1fr);
   padding: 48px;
 
@@ -23,6 +23,6 @@
     align-items: baseline;
     display: grid;
     grid-column-gap: 10px;
-    grid-template-columns: 1fr 120px 1fr;
+    grid-template-columns: 1fr minmax(90px, 100px) minmax(140px, 1fr);
   }
 }
